feat: backend support for liqo v1.0.0
